--- a/i3/i3status.conf
+++ b/i3/i3status.conf
@@ -8,20 +8,17 @@
 
 general {
         colors = true
-        interval = 5
+        interval = 1
 	color_degraded = "#ffa500"
 }
 
 order += "disk /"
 order += "run_watch DHCP"
 #order += "run_watch VPN"
-order += "wireless _first_"
-order += "ethernet _first_"
-order += "cpu_temperature 0"
-order += "cpu_temperature 1"
+order += "ethernet eth0"
+order += "cpu_usage"
 order += "load"
 order += "volume master"
-order += "battery 0"
 order += "tztime local"
 
 volume master {
@@ -29,30 +26,10 @@ volume master {
         format_muted = "🔇: %volume"
 }
 
-cpu_temperature 0 {
-        format = "T0: %degrees°C"
-}
-
-cpu_temperature 1 {
-        format = "T1: %degrees°C"
-}
-
-wireless _first_ {
-        format_up = "W: (%quality at %essid) %ip"
-        format_down = "W: down"
-}
-
-ethernet _first_ {
+ethernet eth0 {
         # if you use %speed, i3status requires root privileges
-        format_up = "E: %ip" 
+        format_up = "E: %ip"
         format_down = "E: down"
-}
-
-battery 0 {
-        format = "%status %percentage (%remaining %consumption)"
-        integer_battery_capacity = true
-        low_threshold = 15
-        threshold_type = "time"
 }
 
 run_watch DHCP {
@@ -68,10 +45,14 @@ tztime local {
 }
 
 load {
-        format = "%1min"
+        format = "%1min %5min %15min"
 }
 
 disk "/" {
         format = "%free (%avail)/%total"
         low_threshold = 2
+}
+
+cpu_usage {
+	format = "CPU: %usage"
 }
