--- a/i3/config
+++ b/i3/config
@@ -66,24 +66,42 @@ exec --no-startup-id nm-applet
 ############################
 #   APPLICATION SETTINGS   #
 ############################
-set $browser 90:browser
-set $xchat   91:xchat
-set $mail    mail
-set $steam   steam
+set $WSbrowser 100:browser
+set $WSxchat   200:xchat
+set $WSmail    mail
+set $WSsteam   steam
+set $WSmusic   music
 for_window [class="SpiderOak"] floating enable, border none
-assign [class="Firefox"] $browser
-assign [class="Xchat"]   $xchat
-assign [class="Icedove"] $mail
-assign [class="Steam"]   $steam
+assign [class="Firefox"]    $WSbrowser
+assign [class="Xchat"]      $WSxchat
+assign [class="Icedove"]    $WSmail
+assign [class="Steam"]      $WSsteam
+assign [class="Quodlibet"]  $WSmusic
 for_window [class="Steam" title="Friends"] floating enable
 
 #######################
 # WORKSPACE LOCATIONS #
 #######################
-workspace $browser output DVI-I-0
-workspace $mail    output DVI-I-0
-workspace $xchat   output DVI-I-1
-workspace $steam   output DVI-I-1
+set $mon-left  DVI-I-1
+set $mon-right DVI-I-0
+# Assign workspaces to the right monitor
+workspace $WSbrowser output $mon-right
+workspace $WSmail    output $mon-right
+workspace $WSxchat   output $mon-left
+workspace $WSsteam   output $mon-left
+workspace $WSmusic   output $mon-left
+# Assign workspaces to monitors (1-5 go on the left, 6-10 on the right)
+workspace  1 output $mon-right
+workspace  2 output $mon-right
+workspace  3 output $mon-right
+workspace  4 output $mon-right
+workspace  5 output $mon-right
+workspace  6 output $mon-left
+workspace  7 output $mon-left
+workspace  8 output $mon-left
+workspace  9 output $mon-left
+workspace 10 output $mon-left
+
 
 ####################
 #   WM SETTINGS    #
@@ -227,8 +245,8 @@ bindsym $mod+7 workspace number 7
 bindsym $mod+8 workspace number 8
 bindsym $mod+9 workspace number 9
 bindsym $mod+0 workspace number 10
-bindsym $mod+b workspace $browser
-bindsym $mod+x workspace $xchat
+bindsym $mod+b workspace $WSbrowser
+bindsym $mod+x workspace $WSxchat
 # cycle through workspaces
 bindsym $mod+$mod2+Tab workspace prev
 bindsym $mod+Tab       workspace next
@@ -246,8 +264,8 @@ bindsym $mod+$mod2+7 move container to workspace number 7
 bindsym $mod+$mod2+8 move container to workspace number 8
 bindsym $mod+$mod2+9 move container to workspace number 9
 bindsym $mod+$mod2+0 move container to workspace number 10
-bindsym $mod+$mod2+b move container to workspace $browser
-bindsym $mod+$mod2+x move container to workspace $xchat
+bindsym $mod+$mod2+b move container to workspace $WSbrowser
+bindsym $mod+$mod2+x move container to workspace $WSxchat
 # move window to a named workspace
 bindsym $mod+$mod2+m exec i3-input -F 'move container to workspace "%s"' -P 'Enter workspace name: '
 
