Remove borders from workspaces, keeping in line with minimalistic look

--- a/i3/config
+++ b/i3/config
@@ -118,11 +118,11 @@ bar {
 		background $back-inact
 		statusline $text
 		separator  $bor-in
-		# selectors        border  background  text
-		focused_workspace  $border $background $text
-		active_workspace   $bor-in $back-inact $text
-		inactive_workspace $bor-in $back-inact $t-in
-		urgent_workspace   $bor-ur $back-urgen $t-ur
+		# selectors        border      background  text
+		focused_workspace  $background $background $text
+		active_workspace   $background $background $t-in
+		inactive_workspace $back-inact $back-inact $t-in
+		urgent_workspace   $back-urgen $back-urgen $t-ur
 	}
 	position top
         status_command i3status -c ~/.i3/i3status.conf
@@ -136,11 +136,11 @@ bar {
 		background $back-inact
 		statusline $text
 		separator  $bor-in
-		# selectors        border  background  text
-		focused_workspace  $border $background $text
-		active_workspace   $bor-in $back-inact $text
-		inactive_workspace $bor-in $back-inact $t-in
-		urgent_workspace   $bor-ur $back-urgen $t-ur
+		# selectors        border      background  text
+		focused_workspace  $background $background $text
+		active_workspace   $background $background $t-in
+		inactive_workspace $back-inact $back-inact $t-in
+		urgent_workspace   $back-urgen $back-urgen $t-ur
 	}
 	position top
 	tray_output none
