--- a/i3/i3status.conf
+++ b/i3/i3status.conf
@@ -8,17 +8,21 @@
 
 general {
         colors = true
-        interval = 1
+        interval = 5
 	color_degraded = "#ffa500"
 }
 
 order += "disk /"
 order += "run_watch DHCP"
 #order += "run_watch VPN"
-order += "ethernet eth0"
+order += "wireless _first_"
+order += "ethernet _first_"
 order += "cpu_usage"
+order += "cpu_temperature 0"
+order += "cpu_temperature 1"
 order += "load"
 order += "volume master"
+order += "battery 0"
 order += "tztime local"
 
 volume master {
@@ -26,10 +30,34 @@ volume master {
         format_muted = "🔇: %volume"
 }
 
-ethernet eth0 {
+cpu_usage {
+	format = "CPU: %usage"
+}
+
+cpu_temperature 0 {
+        format = "T0: %degrees°C"
+}
+
+cpu_temperature 1 {
+        format = "T1: %degrees°C"
+}
+
+wireless _first_ {
+        format_up = "W: %quality at %essid"
+        format_down = "W: down"
+}
+
+ethernet _first_ {
         # if you use %speed, i3status requires root privileges
         format_up = "E: %ip"
         format_down = "E: down"
+}
+
+battery 0 {
+        format = "%status %percentage (%remaining %consumption)"
+        integer_battery_capacity = true
+        low_threshold = 15
+        threshold_type = "time"
 }
 
 run_watch DHCP {
@@ -51,8 +79,4 @@ load {
 disk "/" {
         format = "%free (%avail)/%total"
         low_threshold = 2
-}
-
-cpu_usage {
-	format = "CPU: %usage"
 }
