--- a/i3/config
+++ b/i3/config
@@ -295,9 +295,9 @@ bindcode 122 exec amixer set Master 5%-
 bindcode 123 exec amixer set Master 5%+
 
 # Take screenshots
-bindcode --release 107 exec scrot "/home/xeryustc/Pictures/screen_%Y-%m-%d_%H:%I:%S.png"
-bindcode --release $mod+107 exec scrot -u "/home/xeryustc/Pictures/screen_%Y-%m-%d_%H:%I:%S.png"
-bindcode --release $mod2+107 exec scrot -s "/home/xeryustc/Pictures/screen_%Y-%m-%d_%H:%I:%S.png"
+bindcode --release 107 exec scrot "/home/xeryustc/Pictures/screen_%Y-%m-%d_%H:%M:%S.png"
+bindcode --release $mod+107 exec scrot -u "/home/xeryustc/Pictures/screen_%Y-%m-%d_%H:%M:%S.png"
+bindcode --release $mod2+107 exec scrot -s "/home/xeryustc/Pictures/screen_%Y-%m-%d_%H:%M:%S.png"
 
 ###################
 #   EXTRA MODES   #
