--- a/i3/config
+++ b/i3/config
@@ -23,6 +23,7 @@
 # X core fonts rendering does not support right-to-left and this being a bitmap
 # font, it doesn’t scale on retina/hidpi displays.
 font pango:Monospace 9
+exec xrandr --dpi 96
 
 ####################
 #      COLOURS     #
@@ -62,6 +63,7 @@ exec icedove
 exec --no-startup-id SpiderOakONE
 exec firefox
 exec --no-startup-id nm-applet
+exec owncloud
 
 ############################
 #   APPLICATION SETTINGS   #
@@ -76,7 +78,7 @@ assign [class="Firefox"]    $WSbrowser
 assign [class="Xchat"]      $WSxchat
 assign [class="Icedove"]    $WSmail
 assign [class="Steam"]      $WSsteam
-assign [class="Quodlibet"]  $WSmusic
+assign [class="Rhythmbox"]  $WSmusic
 for_window [class="Steam" title="Friends"] floating enable
 for_window[title="^Figure *"] floating enable
 
@@ -112,8 +114,8 @@ floating_minimum_size 320 x 240
 floating_maximum_size  -1 x  -1
 
 # Hide window decorations
-new_window pixel 3
-new_float normal 3
+new_window pixel 2
+new_float normal 2
 
 # Hide the borders of tiles that touch edge of the screen
 hide_edge_borders both
@@ -144,7 +146,7 @@ bar {
 		urgent_workspace   $back-urgen $back-urgen $t-ur
 	}
 	position top
-	tray_output none
+	tray_output primary
 	strip_workspace_numbers yes
 	output $mon-right
 }
